update controller tests